# doctovec

./: .gitignore  0_run_text_vector.bat  README.md  README_ja.md  drop_office_to_text.bat  drop_remove_passwords.bat  drop_text_to_vector.bat  drop_text_to_vector_dml.bat  generate_document_index.bat  install_cli.bat  installation_status.bat
Config/: pass.example.txt  pass.txt
Docs/: README_tools.md  master_prompt_doc_revision_review.md  meeting prompt.md
Scripts/: download_vector_model.py  generate_document_index.py  office_drop_to_text.py  remove_passwords.py
docmemory_tool/: pyproject.toml
docmemory_tool/src/docmemory/: __init__.py  cli.py  cli_directml.py  mcp_server.py
mcp/: README.md  codex_mcp_example.toml
skills/md-search/: SKILL.md
skills/md-search/agents/: openai.yaml
